classDiagram
    class ImageLoadingUtil {
        +static loadImage(ImageView, String)
        +static loadImage(ImageView, int)
    }
    class MyAppGlideModule {
        +registerComponents(Context, Glide, Registry)
    }
    class MonthYearPickerDialog {
        +setListener(OnDateSetListener)
        +show(FragmentManager, String)
    }
    class OnDateSetListener {
        <<interface>>
        +onDateSet(int, int)
    }

    MyAppGlideModule --|> AppGlideModule
    ImageLoadingUtil ..> Glide
    MonthYearPickerDialog ..> OnDateSetListener
